# RoCS

./: .gitignore  CONTRIBUTING.md  README.md
FRoCS/Knowledge/: robot_model.h
FRoCS/Util/: position.h
quadricopter/: CMakeLists.txt  main.cpp
quadricopter/Actuators/: wheel_vrep.cpp  wheel_vrep.h
quadricopter/Analyze/: pass_vrep_accelerometer.cpp  pass_vrep_accelerometer.h
quadricopter/Execute/Actions/: go_to_position.cpp  go_to_position.h  set_wheels_speed.cpp  set_wheels_speed.h
quadricopter/Knowledge/: avoid_wall_model.cpp  robotnik_model.cpp
quadricopter/Monitor/: accelerometer_vrep_monitor.cpp  accelerometer_vrep_monitor.h
quadricopter/Plan/: go_to_p3dx_planner.cpp  go_to_p3dx_planner.h
quadricopter/Robot/: robotnik.cpp  robotnik.h
quadricopter/Sensors/: accelerometer_vrep_sensor.cpp  accelerometer_vrep_sensor.h  position_vrep_sensor.cpp  position_vrep_sensor.h
quadricopter/Visualizer/: file_visualizer.cpp
robotnik_follow/: CMakeLists.txt
vrep/: scene_03.ttt
